crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_fields.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: item
---
{
  "data": {
    "checkpoints": {
      "sequenceNumber": 1,
      "digest": "DqnhktG3eDNPKRQXDHejaYBCNFAyCtSqJJDCJW7gPxPm",
      "contentDigest": "4DAFLFUa9nURxBwemptqHzWzKDPsfRaF4TqfgNr58aAM",
      "timestamp": "2022-01-03T02:04:56Z",
      "networkTotalTransactions": 3,
      "rollingGasSummary": {
        "computationCost": 0,
        "storageCost": 0,
        "storageRebate": 0,
        "nonRefundableStorageFee": 0
      },
      "epoch": {
        "epochId": 0
      },
      "validatorSignatures": {
        "signature": "tX4fCxBdzwFMO8rRcv/xwgc1KBtMPF5XpkXIpPvEwfCZl/lf9UhOu/MTYqbO8cGL",
        "signersMap": [
          0
        ]
      }
    }
  }
}
