crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_object_lifecycle.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: "[cp1, cp2, cp3, cp4]"
---
[
  {
    "data": {
      "checkpoints": {
        "node": {
          "sequenceNumber": "[seq]",
          "transactions": {
            "nodes": [
              {
                "digest": "[digest]",
                "effects": {
                  "objectChanges": {
                    "nodes": [
                      {
                        "inputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                              }
                            }
                          }
                        },
                        "outputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                              }
                            }
                          }
                        }
                      },
                      {
                        "inputState": null,
                        "outputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::wrapping::Item"
                              }
                            }
                          }
                        }
                      }
                    ]
                  }
                }
              }
            ]
          }
        }
      }
    }
  },
  {
    "data": {
      "checkpoints": {
        "node": {
          "sequenceNumber": "[seq]",
          "transactions": {
            "nodes": [
              {
                "digest": "[digest]",
                "effects": {
                  "objectChanges": {
                    "nodes": [
                      {
                        "inputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                              }
                            }
                          }
                        },
                        "outputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                              }
                            }
                          }
                        }
                      },
                      {
                        "inputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::wrapping::Item"
                              }
                            }
                          }
                        },
                        "outputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::wrapping::Item"
                              }
                            }
                          }
                        }
                      }
                    ]
                  }
                }
              }
            ]
          }
        }
      }
    }
  },
  {
    "data": {
      "checkpoints": {
        "node": {
          "sequenceNumber": "[seq]",
          "transactions": {
            "nodes": [
              {
                "digest": "[digest]",
                "effects": {
                  "objectChanges": {
                    "nodes": [
                      {
                        "inputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                              }
                            }
                          }
                        },
                        "outputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                              }
                            }
                          }
                        }
                      },
                      {
                        "inputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::wrapping::Item"
                              }
                            }
                          }
                        },
                        "outputState": null
                      },
                      {
                        "inputState": null,
                        "outputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::wrapping::Wrapper"
                              }
                            }
                          }
                        }
                      }
                    ]
                  }
                }
              }
            ]
          }
        }
      }
    }
  },
  {
    "data": {
      "checkpoints": {
        "node": {
          "sequenceNumber": "[seq]",
          "transactions": {
            "nodes": [
              {
                "digest": "[digest]",
                "effects": {
                  "objectChanges": {
                    "nodes": [
                      {
                        "inputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                              }
                            }
                          }
                        },
                        "outputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                              }
                            }
                          }
                        }
                      },
                      {
                        "inputState": null,
                        "outputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::wrapping::Item"
                              }
                            }
                          }
                        }
                      },
                      {
                        "inputState": {
                          "address": "[address]",
                          "version": "[version]",
                          "digest": "[digest]",
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::wrapping::Wrapper"
                              }
                            }
                          }
                        },
                        "outputState": null
                      }
                    ]
                  }
                }
              }
            ]
          }
        }
      }
    }
  }
]
