crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_resume_resolves_packages_in_backfill.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: item
---
{
  "data": {
    "checkpoints": {
      "node": {
        "sequenceNumber": "[seq]",
        "transactions": {
          "nodes": [
            {
              "digest": "[digest]",
              "effects": {
                "objectChanges": {
                  "nodes": [
                    {
                      "outputState": {
                        "asMoveObject": {
                          "contents": {
                            "json": {
                              "id": "[json_id]",
                              "balance": "29999999996666800"
                            }
                          }
                        }
                      }
                    },
                    {
                      "outputState": {
                        "asMoveObject": {
                          "contents": {
                            "json": {
                              "id": "[json_id]",
                              "value": "42"
                            }
                          }
                        }
                      }
                    }
                  ]
                }
              }
            }
          ]
        }
      }
    }
  }
}
