crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_transactions_pagination_first.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: item
---
{
  "data": {
    "checkpoints": {
      "sequenceNumber": "[seq]",
      "transactions": {
        "nodes": [
          {
            "digest": "[digest]",
            "effects": {
              "status": "SUCCESS",
              "balanceChanges": {
                "nodes": [
                  {
                    "amount": "100",
                    "coinType": {
                      "repr": "[pkg]::sui::SUI"
                    }
                  },
                  {
                    "amount": "-1997980",
                    "coinType": {
                      "repr": "[pkg]::sui::SUI"
                    }
                  }
                ]
              }
            }
          }
        ],
        "edges": [
          {
            "cursor": "[cursor]"
          }
        ],
        "pageInfo": {
          "hasNextPage": true,
          "hasPreviousPage": false
        }
      }
    }
  }
}
